# ResearchGPT--Enterprise-RAG-AI-Assistant

./: .gitignore  Readme.md  create_chunks.py  heper.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  helper.py  main.py
app/evaluation/: benchmark_question.py  corpus_stats.py  evaluator.py  hallucination_check.py  retrieval_benchmark.py  test_data.py
app/generation/: qa_chain.py
app/ingestion/: chunker.py  embedder.py  loader.py  pdf_loader.py  splitter.py
app/retrieval/: query_rewriter.py  retriever.py  retriver.py  vector_store.py
frontend/: streamlitapp.py
